Fix alignment property in .content class

--- a/style.css
+++ b/style.css
@@ -428,7 +428,7 @@ width: 0%;
 {
 font-family: "hind", sans-serif;  
 position: relative;
-align: ;
+align: left;
 padding: 20px 0px;
 margin: 0px auto 0 auto;
 height: 90%;
@@ -443,7 +443,7 @@ text-align: left;
 {
 font-family: "hind", sans-serif;  
 position: relative;
-align: ;  
+align: left;  
 padding: 20px 0px;
 margin: 0px auto 0 auto;
 width: 75%;
@@ -458,7 +458,7 @@ text-align: left;
 {
 font-family: "hind", sans-serif;  
 position: relative;
-align: ;  
+align: lefft;  
 padding: 20px 0;
 margin: 0px auto 0 auto;
 width: 60%;
